--- a/SmartDur/ConfirmationPage.xaml
+++ b/SmartDur/ConfirmationPage.xaml
@@ -15,7 +15,7 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
-            <Label HorizontalAlignment="Center" HorizontalContentAlignment="Center" FontSize="24">SmartDur</Label>
+            <Label VerticalAlignment="Center" HorizontalAlignment="Center" HorizontalContentAlignment="Center" FontSize="24">SmartDur</Label>
         </Grid>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -31,7 +31,7 @@
                     <Label FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Bottom">Rekomendasi Tanaman:</Label>
                 </Grid>
                 <Grid Grid.Row="1">
-                    <Label Name="cropPrediction" FontSize="24" HorizontalAlignment="Center"></Label>
+                    <Label Name="cropLabel" FontSize="24" HorizontalAlignment="Center"></Label>
                 </Grid>
             </Grid>
             <Grid Grid.Column="1">
@@ -40,15 +40,15 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <Grid Grid.Row="0">
-                    <Label FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Bottom">Prediksi Jumlah Panen: </Label>
+                    <Label FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Bottom">Lama Waktu hingga Panen: </Label>
                 </Grid>
                 <Grid Grid.Row="1">
-                    <Label Name="yieldPrediction" FontSize="24" HorizontalAlignment="Center"></Label>
+                    <Label Name="growthLabel" FontSize="24" HorizontalAlignment="Center"></Label>
                 </Grid>
             </Grid>
         </Grid>
         <Grid Grid.Row="2">
-            <Button Height="50" Width="200" FontSize="24">Submit</Button>
+            <Button Height="50" Width="200" FontSize="24" Click="Button_Click">Confirm</Button>
         </Grid>
     </Grid>
 </Page>
