feat: register page

--- a/SmartDur/MainWindow.xaml
+++ b/SmartDur/MainWindow.xaml
@@ -66,7 +66,8 @@
                 </Style>
             </TextBox.Style>
         </TextBox>
-        <Button Content="SignIn" HorizontalAlignment="Center" Margin="0,284,0,0" VerticalAlignment="Top" Click="Button_Click"/>
+        <Button x:Name="btnRegister" Content="Register" HorizontalAlignment="Left" Margin="353,284,0,0" VerticalAlignment="Top" Click="btnRegister_Click"/>
+        <Button x:Name="btnLogin" Content="SignIn" HorizontalAlignment="Left" Margin="419,284,0,0" VerticalAlignment="Top" Click="Button_Click"/>
 
     </Grid>
 </Window>
