ADD: Highlight in Calendar Skanggg

--- a/SmartDur/MainWindow.xaml
+++ b/SmartDur/MainWindow.xaml
@@ -68,6 +68,6 @@
         </TextBox>
         <Button x:Name="btnRegister" Content="Register" HorizontalAlignment="Left" Margin="353,284,0,0" VerticalAlignment="Top" Click="btnRegister_Click"/>
         <Button x:Name="btnLogin" Content="SignIn" HorizontalAlignment="Left" Margin="419,284,0,0" VerticalAlignment="Top" Click="Button_Click"/>
-
+        <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" />
     </Grid>
 </Window>
