fix: fixing final app

--- a/SmartDur/MainWindow.xaml
+++ b/SmartDur/MainWindow.xaml
@@ -5,67 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SmartDur"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="SmartDur" Height="450" Width="800">
     <Grid Loaded="Grid_Loaded">
         <Label HorizontalAlignment="Center" Margin="0,52,0,0" VerticalAlignment="Top" Width="228" FontSize="48">SmartDur</Label>
-        <TextBox x:Name="txtUsername" HorizontalAlignment="Left" Margin="346,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="120" TextChanged="TextBox_TextChanged_1" AutomationProperties.Name="txtUsername" AutomationProperties.IsRequiredForForm="True">
-            <TextBox.Style>
-                <Style TargetType="{x:Type TextBox}">
-                    <Setter Property="Template">
-                        <Setter.Value>
-                            <ControlTemplate TargetType="{x:Type TextBox}">
-                                <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
-                                    <Grid>
-                                        <TextBlock IsHitTestVisible="False" Text="Username" VerticalAlignment="Center" Opacity="0.5" Margin="5,0,0,0">
-                                            <TextBlock.Style>
-                                                <Style TargetType="{x:Type TextBlock}">
-                                                    <Setter Property="Visibility" Value="Collapsed"/>
-                                                    <Style.Triggers>
-                                                        <DataTrigger Binding="{Binding Text, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type TextBox}}}" Value="">
-                                                            <Setter Property="Visibility" Value="Visible"/>
-                                                        </DataTrigger>
-                                                    </Style.Triggers>
-                                                </Style>
-                                            </TextBlock.Style>
-                                        </TextBlock>
-                                        <ScrollViewer x:Name="PART_ContentHost"/>
-                                    </Grid>
-                                </Border>
-                            </ControlTemplate>
-                        </Setter.Value>
-                    </Setter>
-                </Style>
-            </TextBox.Style>
-        </TextBox>
-        <TextBox x:Name="txtPassword" HorizontalAlignment="Left" Margin="346,240,0,0" VerticalAlignment="Top" Width="120" AutomationProperties.IsRequiredForForm="True" AutomationProperties.Name="txtPassword">
-            <TextBox.Style>
-                <Style TargetType="{x:Type TextBox}">
-                    <Setter Property="Template">
-                        <Setter.Value>
-                            <ControlTemplate TargetType="{x:Type TextBox}">
-                                <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
-                                    <Grid>
-                                        <TextBlock IsHitTestVisible="False" Text="Password" VerticalAlignment="Center" Opacity="0.5" Margin="5,0,0,0">
-                                            <TextBlock.Style>
-                                                <Style TargetType="{x:Type TextBlock}">
-                                                    <Setter Property="Visibility" Value="Collapsed"/>
-                                                    <Style.Triggers>
-                                                        <DataTrigger Binding="{Binding Text, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type TextBox}}}" Value="">
-                                                            <Setter Property="Visibility" Value="Visible"/>
-                                                        </DataTrigger>
-                                                    </Style.Triggers>
-                                                </Style>
-                                            </TextBlock.Style>
-                                        </TextBlock>
-                                        <ScrollViewer x:Name="PART_ContentHost"/>
-                                    </Grid>
-                                </Border>
-                            </ControlTemplate>
-                        </Setter.Value>
-                    </Setter>
-                </Style>
-            </TextBox.Style>
-        </TextBox>
+        <Label Content="Username" HorizontalAlignment="Left" Margin="262,0,0,0" VerticalAlignment="Center" Foreground="Black"/>
+        <Label Content="Password" HorizontalAlignment="Left" Margin="262,250,0,0" VerticalAlignment="Top" Foreground="Black"/>
+        <TextBox x:Name="txtUsername" HorizontalAlignment="Left" Margin="350,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="120"/>
+        <PasswordBox x:Name="txtPassword" HorizontalAlignment="Left" Margin="350,254,0,0" VerticalAlignment="Top" Width="120"/>
         <Button x:Name="btnRegister" Content="Register" HorizontalAlignment="Left" Margin="353,284,0,0" VerticalAlignment="Top" Click="btnRegister_Click"/>
         <Button x:Name="btnLogin" Content="SignIn" HorizontalAlignment="Left" Margin="419,284,0,0" VerticalAlignment="Top" Click="Button_Click"/>
 
