--- a/SmartDur/UserMenu.xaml
+++ b/SmartDur/UserMenu.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SmartDur"
         mc:Ignorable="d"
-        Title="UserMenu" Height="450" Width="800">
+        Title="SmartDur" Height="450" Width="800">
         <Grid>
             <!-- Frame untuk menavigasi antar halaman -->
             <Frame Name="MainFrame" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" NavigationUIVisibility="Hidden"/>
