--- a/SmartDur/ConfirmationPage.xaml
+++ b/SmartDur/ConfirmationPage.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:SmartDur"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="ConfirmationPage">
+      Title="Konfirmasi Tanaman">
 
     <Grid Background="White">
         <Grid.RowDefinitions>
