--- a/SmartDur/FertilizerPage.xaml
+++ b/SmartDur/FertilizerPage.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SmartDur"
         mc:Ignorable="d"
-        Title="Fertilizer" Height="450" Width="800">
+        Title="Admin SmartDur" Height="450" Width="800">
     <Grid Loaded="Grid_Loaded" SnapsToDevicePixels="True">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
