--- a/SmartDur/InputPage.xaml
+++ b/SmartDur/InputPage.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:SmartDur"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="InputPage">
+      Title="Input Lokasi dan Pupuk">
 
     <Grid Background="White">
         <Grid.RowDefinitions>
